# aimotion-workflow

./: LICENSE
ai-anime-workflow/ai-anime-workflow/: CONTRIBUTING.md  README.md  pyproject.toml
ai-anime-workflow/ai-anime-workflow/demo/: app.py  index.html
ai-anime-workflow/ai-anime-workflow/docs/architecture/: README.md
ai-anime-workflow/ai-anime-workflow/examples/prompts/: sample_storyboard.yaml
ai-anime-workflow/ai-anime-workflow/scripts/: setup.sh
ai-anime-workflow/ai-anime-workflow/src/: __init__.py
ai-anime-workflow/ai-anime-workflow/src/api/: __init__.py  base.py
ai-anime-workflow/ai-anime-workflow/src/core/: frame.py  scene.py  timeline.py
ai-anime-workflow/ai-anime-workflow/src/models/: __init__.py
ai-anime-workflow/ai-anime-workflow/src/pipeline/: generator.py  interpolator.py
ai-anime-workflow/ai-anime-workflow/tests/integration/: test_pipeline_smoke.py
ai-anime-workflow/ai-anime-workflow/tests/unit/: test_planner.py  test_rate_limiter.py
config/: settings.example.yaml
docs/api-reference/: README.md
docs/architecture/: pipeline.md
src/api/: novelai.py  stability.py
src/core/: __init__.py
src/models/: schemas.py
src/pipeline/: __init__.py  compositor.py  planner.py  run.py
src/utils/: __init__.py  config.py  rate_limiter.py
